implement create tasks

--- a/plannr2.0/src/styles/App.css
+++ b/plannr2.0/src/styles/App.css
@@ -14,6 +14,11 @@ root {
     position: absolute;
 }
 
+.bins{
+    display: flex;
+    flex-direction: row;
+}
+
 .addIcon{
     position:absolute;
     top: 0;
