--- a/plannr2.0/src/styles/App.css
+++ b/plannr2.0/src/styles/App.css
@@ -2,13 +2,19 @@ root {
     --off-white: #F6F5F5;
     --text-gray: #858585;
   }
-  
+
+/* body{
+    overflow: hidden;
+} */
 
 .App{
+    -webkit-app-region: drag;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 5px;
     padding-top: 35px;
+    
 }
+
 .Bins{
     display: flex;
     position: absolute;
@@ -25,14 +31,17 @@ root {
     right: 0;
     color: #858585;
     margin: 5px;
+    -webkit-app-region: no-drag;
 }
 
 .popupForm{
     position: absolute;
+    margin: 0px;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
+    border-radius: 10px;
     background-color: rgba(143, 143, 143, 0.15);;
     backdrop-filter: blur(5px);
 }
@@ -40,4 +49,8 @@ root {
 .close{
     color:#858585;
     transform: translate(50%, 50%);
+}
+
+button{
+    -webkit-app-region: no-drag;
 }
