--- a/plannr2.0/src/styles/App.css
+++ b/plannr2.0/src/styles/App.css
@@ -11,8 +11,23 @@ root {
     -webkit-app-region: drag;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 5px;
-    padding-top: 35px;
+    padding-top: 5px;
     
+}
+
+.date {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 25px; /* Or any other value that suits your layout */
+}
+
+.date h1 {
+    position: relative;
+    margin: 0;
+    font-size: 16px;
+    color: #858585;
 }
 
 .Bins{
